static/css/headers.css
body {
    padding: 0px;
    margin: 0px;
    background: linear-gradient(129.76deg, #252937 -0.72%, #101218 80.04%);
}

.profileContainer {
    cursor: pointer;
}

@media (max-width: 400px) {

    .logo {
        width: 60px;
    }
}

.profileCard {
    position: absolute;
    right: 8%;
    top: 90%;
    z-index: 2;
    background: rgba(217, 217, 217, 0.02);
    box-shadow: 40px 64px 140px rgba(0, 0, 0, 0.9);
    backdrop-filter: blur(60px);
    border-radius: 16px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    padding: 16px 24px;
    gap: 16px;
    cursor: pointer;
    display: none;
}

.textContainer {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 0px;
    gap: 6px;
}

h2 {
    margin: 0px;
    font-family: 'Inter';
    font-style: normal;
    font-weight: 700;
    font-size: 16px;
    line-height: 19px;
    color: #FFFFFF;
}

h4 {
    margin: 0px;
    color: rgba(255, 255, 255, 0.64);
    font-family: 'Inter';
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 17px;
}

.line {
    width: 185px;
    height: 0px;

    border: 1px solid rgba(255, 255, 255, 0.16);

}

.logoutBtn {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 0px 8px;
    gap: 8px;
}

.logoutBtn:hover {
    gap: 10px;
}

h3 {
    font-family: 'Inter';
    font-style: normal;
    font-weight: 700;
    font-size: 14px;
    line-height: 15px;

    color: #FD5F49;
}

.icons {
    display: flex;
    flex-direction: row;
    gap: 64px;
}

.header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 24px 16%;
    position: relative;
    align-items: center;

}

.menu-toggle {
    color: white;
    display: none;
}


.close {
    display: none;
}

.contain {
    color: white;
    width: max-content;
    position: relative;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.contain:hover {
    color: #FD5F49;
    cursor: pointer;
}

.contain::after {
    content: "";
    position: absolute;
    width: 0%;
    height: 2px;
    transform: scaleX(0);
    transform-origin: center;
    transition: transform 0.3s ease-in-out;
    border-radius: 40px;
}

.contain:hover::after {
    width: 100%;
    top: 140%;
    left: 0%;
    background-color: #FD5F49;
    transform: scaleX(1);
}

.icon {
    stroke: #777980;
    fill: none;
    opacity: 1;
    stroke-width: 1.5;

}

.icon:hover:not(.active) {
    stroke: #FD5F49;
    cursor: pointer;
}

.icon:hover {
    cursor: pointer;
}

.icon.active {
    fill: #FD5F49;
    stroke: none;
}

@media (max-width: 1100px) {
    .logo {
        width: 110px;
    }

    .icn {
        width: 20px;
    }

    .profile {
        width: 80%;
    }
}

@media (max-width: 768px) {
    .icons {
        display: none;
    }

    .menu-toggle {
        display: block;
        cursor: pointer;
        position: absolute;
        z-index: 5;

    }

    .icons.active {
        display: flex;
        flex-direction: column;
        position: absolute;
        padding-top: 300px;
        gap: 32px;
        align-items: center;
        justify-content: center;
        right: 0px;
        z-index: 3;
        top: 0px;
        width: 70%;
        height: 100vh;
        background: #252937;
        padding: 24px;
    }

    i {
        display: flex;
        align-items: center;
    }

    i.active {
        color: red;
    }

    p {
        display: inline-block;
        margin: 0px 10px;
        font-family: sans-serif;
        font-size: 13px;
        font-style: normal;
        font-weight: 400;
    }

    .close {
        display: block;
        color: white;
        position: absolute;
        z-index: 4;
        cursor: pointer;
        top: 50%;
        right: 64px;
        transform: translate(-50%, -50%);
    }

}

